--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/Week 08/练习/client.js"
+            "program": "${workspaceFolder}/Week 09/3-parserTag/client.js"
         }
     ]
 }
