--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/Week 09/练习/client1.js"
+      "program": "${workspaceFolder}/Week 09/4-emitToken/client.js"
     }
   ]
 }
