--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/Week 09/9-computeCSS/client.js"
+      "program": "${workspaceFolder}/Week 09/12-computedMatch/client.js"
     }
   ]
 }
