--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/Week 09/14-specificity/client.js"
+      "program": "${workspaceFolder}/Week 10/layout/1/client.js"
     }
   ]
 }
